<resources>
    <string name="app_name">xf4-SubBook</string>
    <string name="title_activity_new_sub">NewSubActivity</string>
    <string name="new_subs_name">Name (up to 20 characters):</string>
    <string name="new_subs_date">Date Started (yyyy-MM-dd):</string>
    <string name="new_subs_charge">Monthly Charge (In Canadian Dollar):</string>
    <string name="new_subs_comment">Comment (up to 30 characters):</string>
    <string name="new_edit_name">Enter a name</string>
    <string name="new_edit_year">Year</string>
    <string name="new_edit_charge">Enter a monthly charge</string>
    <string name="new_edit_comment">Enter a comment</string>
    <string name="new_button_commit">Commit</string>
    <string name="new_bottom_quit">Quit</string>
    <string name="main_button_new">Create New Subscription</string>
    <string name="main_button_clear">Clear All Subscriptions</string>
    <string name="new_edit_month">Month</string>
    <string name="new_edit_day">Day</string>
    <string name="title_activity_view_sub">ViewSubActivity</string>
    <string name="view_subs_name">Name:</string>
    <string name="view_subs_date">Date Started:</string>
    <string name="view_subs_charge">Monthly Charge:</string>
    <string name="view_subs_comment">Comment:</string>
    <string name="view_button_return">Return to Main Page</string>
    <string name="view_button_edit">Edit Subscription</string>
    <string name="edit_button_return">Return Without Save</string>
    <string name="edit_Save_Button">Save Change</string>
    <string name="view_button_delete">Delete This Subscription</string>
</resources>
