<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.xf4_subbook.EditSubActivity">

    <TextView
        android:id="@+id/viewResult2"
        android:layout_width="357dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editReturnButton" />

    <EditText
        android:id="@+id/editComment2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/new_edit_comment"
        android:inputType="textPersonName"
        android:maxLength="30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewComment2" />

    <TextView
        android:id="@+id/viewComment2"
        android:layout_width="350dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/new_subs_comment"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCharge2" />

    <TextView
        android:id="@+id/viewCharge2"
        android:layout_width="350dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/new_subs_charge"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editYear2" />

    <EditText
        android:id="@+id/editCharge2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/new_edit_charge"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewCharge2" />

    <EditText
        android:id="@+id/editDay2"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/new_edit_day"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintStart_toEndOf="@+id/editMonth2"
        app:layout_constraintTop_toBottomOf="@+id/viewDate2" />

    <EditText
        android:id="@+id/editMonth2"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/new_edit_month"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintStart_toEndOf="@+id/editYear2"
        app:layout_constraintTop_toBottomOf="@+id/viewDate2" />

    <EditText
        android:id="@+id/editYear2"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/new_edit_year"
        android:inputType="number"
        android:maxLength="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewDate2" />

    <TextView
        android:id="@+id/viewName2"
        android:layout_width="350dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/new_subs_name"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewDate2"
        android:layout_width="350dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/new_subs_date"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName2" />

    <EditText
        android:id="@+id/editName2"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/new_edit_name"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewName2" />

    <Button
        android:id="@+id/editReturnButton"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/edit_button_return"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editComment2" />

    <Button
        android:id="@+id/editSaveButton"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/edit_Save_Button"
        app:layout_constraintStart_toEndOf="@+id/editReturnButton"
        app:layout_constraintTop_toBottomOf="@+id/editComment2" />

</android.support.constraint.ConstraintLayout>
